2004-10-16  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/Makefile.am:
	* flumotion/component/audiotest/Makefile.am:
	* flumotion/component/audiotest/__init__.py:
	* flumotion/component/audiotest/audiotest.py:
	* flumotion/component/audiotest/audiotest.xml:
	* flumotion/wizard/enums.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/wizard_step.py:

	Add an audiotest step (sinesrc)
	
2004-10-16  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/overlay/Makefile.am:
	* flumotion/component/overlay/cc_24x24.png:
	* flumotion/component/overlay/fluendo_24x24.png:
	* flumotion/component/overlay/overlay.py:
	* flumotion/component/overlay/xiph_24x24.png:
	* flumotion/twisted/gstreactor.py:
	* flumotion/wizard/wizard_step.py:

	Add logos to overlay component, remove some prints in gstreactor

2004-10-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* conf/planet.xml:
	* doc/random/authentication:
	* flumotion/common/keycards.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_credentials.py:
	* flumotion/test/test_keycards.py:
	* flumotion/twisted/credentials.py:
	  add tests and add some keycards

2004-10-16  Johan Dahlin  <johan@gnome.org>

	* data/image/wizard/Makefile.am (image_DATA): Add a few more icons
	for the wizard

	* flumotion/manager/component.py (ComponentHeaven.shutdown):
	Remove the avatar
	(ComponentHeaven.createAvatar, ComponentHeaven.removeAvatar): Add
	logging.
	(ComponentHeaven.removeAvatar): Remove feeders too
	(FeederSet.removeFeeders): New method.

	* flumotion/manager/main.py (_loadConfig): Don't parse the
	configuration twice.

2004-10-15  Johan Dahlin  <johan@gnome.org>

	* configure.ac:
	* data/glade/wizard.glade:
	* data/image/wizard/audiosrc.png:
	* data/image/wizard/consumption.png:
	* data/image/wizard/firewire.png:
	* data/image/wizard/licenses.png:
	* data/image/wizard/overlay.png:
	* data/image/wizard/source.png:
	* data/image/wizard/testsource.png:
	* data/image/wizard/webcam.png: